# KitchenVault

./: .env.example  .gitignore  CLAUDE.md  README.md  compose.yaml  pom.xml
.github/workflows/: docker-cookidoo.yml  docker-frontend.yml  docker-native.yml  docs.yml
backend/: Dockerfile  pom.xml
backend/src/main/resources/: application-dev.yml  application.yml
backend/src/test/resources/: application-test.yml  test-chat-schema.sql
contracts/: .openapi-generator-ignore  pom.xml
cookidoo-service/: Dockerfile  pyproject.toml
cookidoo-service/src/: config.py  cookidoo_session.py  main.py  models.py
cookidoo-service/src/routes/: collections.py  recipes.py
cookidoo-service/tests/: conftest.py  test_collections.py  test_health.py  test_recipes.py
docs/: .gitignore  antora-playbook.yml  antora.yml  package-lock.json  package.json
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: ai.adoc  (+7 more)
frontend/: Dockerfile  angular.json  cypress.config.ts  nginx.conf.template  openapitools.json  package-lock.json  package.json  tsconfig.json
frontend/cypress/: tsconfig.json
frontend/cypress/e2e/: admin.cy.ts  app-loads.cy.ts  menu-plan.cy.ts  navigation.cy.ts  recipe-detail.cy.ts  recipes-browse.cy.ts  recipes-search.cy.ts
frontend/cypress/fixtures/: admin-stats.json  categories.json  collections.json  recipe-detail.json  recipes-page.json  recipes-picker.json  suggestions.json  sync-running.json  sync-success.json  week-plan-empty.json  week-plan-partial.json
frontend/projects/api-client/: ng-package.json  tsconfig.lib.json
frontend/scripts/: entrypoint.sh
(+200 files in other folders)
