[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cookidoo-service"
version = "1.0.0"
description = "FastAPI wrapper around cookidoo-api for my-cookidoo"
requires-python = ">=3.12"
dependencies = [
    "cookidoo-api>=0.16.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
